update: README steps single-experiment